fix: fix markdown broken css in file-wrapper

--- a/src/content_scripts/styles/content_scripts.scss
+++ b/src/content_scripts/styles/content_scripts.scss
@@ -142,7 +142,7 @@ div.channel-list-item.x-view-selected>.online-status.online-number-offline {
     }
 
     .msg-text {
-        .text-wrapper div.markdown>pre {
+        :is(.text-wrapper, .file-wrapper) div.markdown>pre {
             color: $gunmetal-gray;
         }
 
